--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Margareth Pardo.jfif" alt="Profile Picture">
+					<img class="profile-pic" src="Margareth Pardo.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -26,7 +26,7 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Margareth Pardo</p>
-					<p class="text-title-company">Representante de Promoción Médica</p>
+					<p class="text-title-company">Representante de Ventas</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
 				<div class="col">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+573156164539">
+		<a href="tel:+573175097551">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+57) 3156164539</p>
+						<p class="text-detail">(+57) 3175097551</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
