--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="LILIANA TAMAYO.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="MARCELA PEREZ.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Liliana María Tamayo</p>
+					<p class="text-name">Marcela Perez</p>
 					<p class="text-title-company">Representante de Promoción</p>
 					<p class="text-title-company">Fresenius Kabi Colombia</p>
 				</div>
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:liliana.tamayo@fresenius-kabi.com">
+		<a href="mailto:marcela.perez@fresenius-kabi.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">liliana.tamayo@fresenius-kabi.com</p>
+						<p class="text-detail">marcela.perez@fresenius-kabi.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+573156513889">
+		<a href="tel:+573175097430">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+57) 3156513889</p>
+						<p class="text-detail">(+57) 3175097430</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
